# DS18B20-Temperature-Sensor-Rust

./: Cargo.toml  README.md
src/: main.rs
src/hal/: i2c.rs  sensor.rs
